Fix Issue #225 : Bundling Bootstrap CSS file causing java.lang.StackOverflowError
git-svn-id: https://svn.java.net/svn/jawr~svn/core/trunk@1066 4db09855-0bbe-6bc9-8408-d5225a1fabd9

--- a/jawr-core/src/test/resources/cssminifier/source.css
+++ b/jawr-core/src/test/resources/cssminifier/source.css
@@ -34,6 +34,9 @@ anotherRule
 	
 }
 
+a[href]:after { content: " (" attr(href) ")"; }
+abbr[title]:after { content: " (" attr(title) ")"; }
+
 /** CSS3 selectors */
 E[foo] { background : white }
 E[foo="bar"] { background : white }
